# ChangeLog for dev-java/scala-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/ChangeLog,v 1.10 2009/02/09 14:42:55 caster Exp $

  09 Feb 2009; Vlastimil Babka <caster@gentoo.org> scala-bin-1.2.0.1.ebuild:
  Migrate to gen2 eclass.

  26 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Move from maintainer-needed to java.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing karltk from metadata.xml as per #200332. Assigning to
  maintainer-needed.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  19 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  scala-bin-1.2.0.1.ebuild:
  stable on amd64 and x86

  22 Oct 2004; Dylan Carlson <absinthe@gentoo.org> scala-bin-1.2.0.1.ebuild:
  Keywords ~amd64.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> scala-bin-1.2.0.1.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  28 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Gentoo Technologies, Inc. -> Gentoo Foundation

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

*scala-bin-1.2.0.1 (02 Aug 2004)

  02 Aug 2004; Karl Trygve Kalleberg <karltk@gentoo.org>
  scala-bin-1.2.0.1.ebuild: Initial import. Ebuild submitted by myself.