@@ -1,4 +1,4 @@
 DIST scala-1.2.0.1.tar.bz2 4548508 RMD160 39fdd20879e7a55af62e409be96f34db37075950 SHA1 01b7257ada1a50d03565a2edd9abb34420de13e9 SHA256 975d6e10febf5d52a3f2d826afa7f98ddbec0a6f05eaf6c30a3f27a472ca84b9
-EBUILD scala-bin-1.2.0.1.ebuild 1471 RMD160 94ae850c5fc677386ffc3dd53d6742ff83a05de2 SHA1 cb6e41e45d1710f96d473e040d7cff56fdcdf733 SHA256 e327e478d072948b7791c6133e754c9961ba1fce374325d42233fc89a1028e52
-MISC ChangeLog 1511 RMD160 567df9cd2666415f95eba36624dc377d9294a7c8 SHA1 427d053e0340c6472027c7ad7996ad70384f4202 SHA256 2a1bc5fd6ca4593a54e22c26675208e7b924641a56719a117c2d22a7c7ed50d3
+EBUILD scala-bin-1.2.0.1.ebuild 1490 RMD160 d8f145426bcef68cb23af1e39d8cd30bddcfefc6 SHA1 60b07138ebea6018213eb5ac8e57ea972f5c867e SHA256 3edf9ac66c19041a29f4b8eb89f76f91cdf8604478fce1be79ef69367ab9da85
+MISC ChangeLog 1614 RMD160 6ef4ec6fc051e57b8b775bb320b7965aa2170f49 SHA1 6c1885b2261596b177e7b9ac5f6bac4d285dca08 SHA256 7f334f8adc74ca452be8ad7fd56459e6ac6f777fe986111c84c2bf3207880881
 MISC metadata.xml 159 RMD160 8da0afd0f687b8985b7f0432fec737950271e354 SHA1 1d089c3afbfafd09e371d7806cc0c72a5c76e5a1 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6
