@@ -9,13 +9,13 @@ EBUILD pike-7.6.112-r1.ebuild 3091 RMD160 64069c97a6737828989986da40697361caccfb
 EBUILD pike-7.6.112.ebuild 2907 RMD160 6c3ca97d1b48f80149a3aea9c783915be4d72342 SHA1 af93a9beb1d5ee653bb01b8233224981c4e116b8 SHA256 81cbb3555e85bfce59b499f16387f280d6d80b03d56d12415010ce0cde0332ce
 EBUILD pike-7.6.86-r1.ebuild 2910 RMD160 d038a287d4d0c1241d1ccaf5b7c4148f7f110fb9 SHA1 67a82be8319a2d37d75f0953a09dfc1fb5b7bfcf SHA256 e5d1c263c5e7e46984378a4c1c3f21603cf4eed0e3c3668de1699211a5775ed1
 EBUILD pike-7.8.316.ebuild 3817 RMD160 b589d06a2db60bc6aa202c756def011bd0aa71d2 SHA1 02664d57a8a98ebcf365e9bada5529fff4f07094 SHA256 2e2fe14f7915507b18d3dc1a7b92ec2118cce8e2e101bebdcfe3c11334e06c27
-EBUILD pike-7.8.352.ebuild 3638 RMD160 07db2ed895d045f64e03bfd05cfbc357c3556e69 SHA1 78a2de610cf5f07c9f3896f27aacf8cafc87c32c SHA256 874c7b720fad0eeb90d4ac64315f13a6403213b1a61df5c52ec9b868656dd128
-MISC ChangeLog 5457 RMD160 bf3f557a9b2d6c7ce9ff822d836b92e3e0182951 SHA1 6b85c6b6a0a1d4fb9f18cc9637801326d7012169 SHA256 69648893a45e0c595901f2db19fba2bebe2ba142bb63d598a52180c8bb7317e2
+EBUILD pike-7.8.352-r1.ebuild 3904 RMD160 c3d98023c128ca44ad51bcfe65d36014c55447e8 SHA1 0edc338aa08caf19bb7ac652e8b764a5b9f2cc13 SHA256 073182ee68f2149fa0f47c3b5d44502bbb41037a5f12340c05fc449adaffdb37
+MISC ChangeLog 5630 RMD160 4ba998c69b3344ad6e8dc9dcf41eb12e234c0861 SHA1 4ffd901716362085c2dfffa0a3c4cc9ab551a9c8 SHA256 8b0914640bcae1c68655f1f1ba3bdf928c3f651f145b45d6714d75e2a94e621e
 MISC metadata.xml 525 RMD160 146c22c7b14d679951bf83d124a37880e801af34 SHA1 18c5ff49ca4cf3abb05cc776ee7e85fc456ac813 SHA256 ee543068e8759fd84639e167869465b8a6b80acb6ce53b337bc9b6570f53d494
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAk0HXV4ACgkQojoBcbX8GzRSmgCfXB6BVGeR9ZyhhftvZvVkQwAV
-T5UAnjfELpqApqT3fxDhFjiIXivaxDVz
-=6msM
+iEYEARECAAYFAk0IPMMACgkQojoBcbX8GzRemQCcDhwZICuWjZr4g/H1kRtOpxBM
+FgAAnjsGkOQ01KYVmgRCdE6A2dgTKTRf
+=8A+m
 -----END PGP SIGNATURE-----
