@@ -1,9 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ZenTest-4.1.3.gem 62976 RMD160 4c1b3dcfaa0c3af02742afc2ae355bb460496a5d SHA1 7377d3a60f276ae31d6e2294e5974ea2fed46e72 SHA256 17027e7878e7849de1c74089c4d1c5943d8068815dafc2c946a5068b8b634803
 DIST ZenTest-4.3.3.gem 60928 RMD160 51291d3959ac980cbd9fffda6fcf1ece44ccfdc5 SHA1 ca899cdffd9a50a318c805b9a09c3edb900292ca SHA256 2a19d064380d7fa3afb825767a52f19190dde6c4599678d46bf17125df5d68b3
 DIST ZenTest-4.4.0.gem 64000 RMD160 442baa7d562ea66d34d9d68f8ac7f1c185aa527f SHA1 1dbd47f8a8b3147aafa70d4db4eca1d2d4bfa68c SHA256 28855f0ce0d4577d6fccc8b2c815b428c1d40376b70980d7c0e7658400ed14ef
+DIST ZenTest-4.4.2.gem 66048 RMD160 c04c76afb69e28f81e16881938925979d774073e SHA1 fa233a1f7cf438e92f7fa2c3dbaf1afab0c65f4d SHA256 7325414108f87a5fab07242679e977ab7c69503189f67e88439f90df982c58e8
 EBUILD zentest-4.1.3.ebuild 810 RMD160 f1a7af1dc75d3ef1e01bcc29f81eaa7700579845 SHA1 b0a3c9fee299c647a8a5224cdf459871de957723 SHA256 4c8f2cd7ca152688d61f02983841f9efb86bd7c47d4e227b360eeaaca5738353
 EBUILD zentest-4.3.3-r1.ebuild 1112 RMD160 c392065d70cbf1c93ac6259798c9a6586c92d9e9 SHA1 ad7462678dc45376ef9270f24d7f862ea710bf81 SHA256 d21161a0552fc00aeee520a111f260a098015366d029b2c2c58b1736e786c4c7
 EBUILD zentest-4.3.3.ebuild 1085 RMD160 704b1fee0da943091fc98e1043c298684b47c621 SHA1 8bd02aee3f6b3d8371a97b45a0ae4ac40e53fbf4 SHA256 48753976e100bfde708a0461ef33099045ab2afbd02eecf8d64ce1a2f1ff1bce
 EBUILD zentest-4.4.0.ebuild 1146 RMD160 115f8e7724002a4aa04f3f4393cb9e04fa3c685c SHA1 1f37749d9a50b4bfe63b3576ce8412d33da796a6 SHA256 54b06ac514ee3bb1e51a53f5425c27e9ce1d5b19fa4198cc7b31d4ed8707a755
-MISC ChangeLog 10808 RMD160 ac70835afd5c10a53982ec1bed92dd36d70891c0 SHA1 522863113e6b279b572658a63f9b6499bfe9616b SHA256 cef200af9f424caced9b6498da1183170bc886badfffdfab223d74ee6a2d3d08
+EBUILD zentest-4.4.2.ebuild 1145 RMD160 6f6680f2bb2c91b5639df6d5a855f08b773643d0 SHA1 022d774deab13f7c8fe9b582944656686ca5d69e SHA256 97a5ab67c33c26c7367cdd7d21f9e044ca1a72b354ee7075b9f80546448a5a99
+MISC ChangeLog 10963 RMD160 4e5e0ad911906aab961f235a0933818c07b85436 SHA1 ea04d4321a53281bd744ff32f728b18b4342b308 SHA256 3630205e7589e56b2060f4e5b93184f1ed07c021112fdd0c09a0e9673a785989
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAk0IaTgACgkQppaJjIURYXLhZAD/ScY12VPUxx8RD/CKC4e8euF6
+chegpZPKYXT64qzJHOUBAJ2ycpPMgo8iCq1/BuZvjQlxj8tRiTgJ7Y01QWzBJv8r
+=BrS9
+-----END PGP SIGNATURE-----
