@@ -1,5 +1,5 @@
 >=dev-java/java-config-2.1.9-r1
->=virtual/jre-1.4 >=dev-java/java-config-2.1.9-r1
+>=virtual/jre-1.4 !dev-lang/scala >=dev-java/java-config-2.1.9-r1
 0
 http://scala.epfl.ch/downloads/distrib/files/scala-1.2.0.1.tar.bz2
 
