@@ -1,0 +1,22 @@
+ruby_targets_ruby18? ( doc? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ruby18] dev-ruby/hoe-seattlerb[ruby_targets_ruby18] ) test? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ruby18] dev-ruby/hoe-seattlerb[ruby_targets_ruby18] virtual/ruby-minitest[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( doc? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ree18] dev-ruby/hoe-seattlerb[ruby_targets_ree18] ) test? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ree18] dev-ruby/hoe-seattlerb[ruby_targets_ree18] virtual/ruby-minitest[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( doc? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ruby19] dev-ruby/hoe-seattlerb[ruby_targets_ruby19] ) test? ( >=dev-ruby/hoe-2.6.1[ruby_targets_ruby19] dev-ruby/hoe-seattlerb[ruby_targets_ruby19] virtual/ruby-minitest[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( doc? ( >=dev-ruby/hoe-2.6.1[ruby_targets_jruby] dev-ruby/hoe-seattlerb[ruby_targets_jruby] ) test? ( >=dev-ruby/hoe-2.6.1[ruby_targets_jruby] dev-ruby/hoe-seattlerb[ruby_targets_jruby] virtual/ruby-minitest[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( doc? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( doc? ( dev-ruby/rake[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( doc? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/rake[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+0
+mirror://rubygems/ZenTest-4.4.2.gem
+
+http://rubyforge.org/projects/zentest/
+Ruby
+ZenTest provides tools to support testing: zentest, unit_diff, autotest, multiruby, and Test::Rails
+~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris
+eutils multilib portability ruby-fakegem ruby-ng toolchain-funcs
+ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 ruby_targets_jruby doc doc test
+
+
+
+2
+
+compile configure install prepare setup test unpack
+
+
+
+
+
