@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/pike
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/pike/ChangeLog,v 1.37 2010/12/14 12:45:45 araujo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/pike/ChangeLog,v 1.38 2010/12/15 04:23:57 araujo Exp $
+
+*pike-7.8.352-r1 (15 Dec 2010)
+
+  15 Dec 2010; Luis F. Araujo <araujo@gentoo.org> -pike-7.8.352.ebuild,
+  +pike-7.8.352-r1.ebuild:
+  Remove modules to avoid sandbox errors
 
 *pike-7.8.352 (14 Dec 2010)
 
