@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/scala-bin
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/ChangeLog,v 1.10 2009/02/09 14:42:55 caster Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/ChangeLog,v 1.11 2010/12/15 07:07:47 ali_bush Exp $
+
+  15 Dec 2010; Alistair Bush <ali_bush@gentoo.org> scala-bin-1.2.0.1.ebuild:
+  Block dev-lang/scala
 
   09 Feb 2009; Vlastimil Babka <caster@gentoo.org> scala-bin-1.2.0.1.ebuild:
   Migrate to gen2 eclass.
